# QuadraticSieve

./: .gitignore  CMakeLists.txt  README.md  TODO
C/: QuadraticSieve.c
C/DAC/: dac_multiplication.c  dac_multiplication.h  dac_multiplication_parra.c  dac_multiplication_strassen.c  dac_multiplication_strassen.h  dac_multiplication_strassen_combined.c  dac_multiplication_strassen_combined.h  test.c
C/Eratosthene/: eratosthene.h  test.c
C/Factorization/: factorization.c  test.c
C/Friables/: test.c
C/Gauss/: test.c
C/Krylov/: krylov.c  test.c
C/Legendre/: legendre.c  legendre.h  test.c
C/Product/: test.c
C/Tools/: dac_tools.c  dac_tools.h  test.c
Maths/: naive.py  wiedemann.py
Maths/latex/: Proof.aux  Proof.bbl  Proof.blg  Proof.fdb_latexmk  Proof.fls  Proof.tex  Proof.toc  biblio.bib
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_product.cpp  krylov.c  observations.md  previous_product.c  product.cpp
benchmarks/: bench.py  miller_rabin.py  naive_timings.txt  qs_timings.txt  rsa_numbers.txt  visu_naive.py
maths/: example.py
maths/latex/: Proof.aux  Proof.bbl  Proof.blg  Proof.fdb_latexmk  Proof.toc  biblio.bib
src/: CMakeLists.txt  main.cpp  naive.cpp  quadratic_sieve.cpp
src/DAC/: dac_multiplication_alpha.c  dac_multiplication_alpha.h  dac_multiplication_parra.h  dac_multiplication_strassen_combined.c  dac_multiplication_strassen_parra.c  dac_multiplication_strassen_parra.h
src/Eratosthene/: eratosthene.c  eratosthene.cpp  eratosthene.hpp
src/Factorization/: factorization.cpp  factorization.h  factorization.hpp
src/Friables/: friables.c  friables.cpp  friables.hpp
src/Gauss/: gauss.c  gauss.h
src/Krylov/: krylov.cpp  krylov.h  krylov.hpp
src/Legendre/: legendre.cpp  legendre.hpp
src/Product/: dotProduct.cpp  dotProduct.hpp  product.c  product.cpp  product.h  product.hpp  product_pthread.cpp  product_pthread.hpp
src/Solution/: solution.cpp  solution.hpp
src/Tools/: matrix.cpp  matrix.hpp  tools.c  tools.cpp  tools.h  tools.hpp  vectors.cpp  vectors.hpp
src/Wiedemann/: wiedemann.cpp  wiedemann.hpp
test/: CMakeLists.txt  dac.c  eratosthene.c  eratosthene.cpp  factorization.c  factorization.cpp  friables.c  friables.cpp  gauss.c  krylov.c  legendre.c  legendre.cpp  product.c  product.cpp  tools.c  tools.cpp  wiedemann.cpp
